# chronosextender

./: .gitignore  CHRONOS_BUILD_BLUEPRINT_v2 (1).md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
chatgpt-app/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  vite.widget.config.ts  wrangler.jsonc
chatgpt-app/migrations/: 0001_init.sql
chatgpt-app/src/: worker.ts
chatgpt-app/test/: service.test.ts
docs/plans/: 2026-03-08-pulse-command-deck-design.md  2026-03-08-warm-clinical-light-design.md  2026-03-08-warm-clinical-light-implementation.md
extension/: background.js  manifest.json
scripts/: clean-tauri-bundle-artifacts.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assistant.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/daemon/: classifier.rs  cloud.rs  flow.rs  health.rs  mod.rs  tracker.rs  websocket.rs
src/components/: AIInsights.tsx  CategoryMiniBar.tsx  CategoryPieChart.tsx  CategoryRace.tsx  CategoryTiles.tsx  CommandPalette.tsx  DayProgress.tsx  EventCard.tsx  FlowOrb.tsx  Layout.tsx  ManualTimeEntryCard.tsx  MissionTimeline.tsx  NowHero.tsx  PageTopStrip.tsx  PendingBlockCard.tsx  RuleSuggestions.tsx  StatusPopover.tsx  TimelineBar.tsx  TimesheetBlockCard.tsx  WorkBlockCard.tsx
src/config/: ai-config.ts
src/hooks/: useAIChat.ts  useAppContext.ts  useAssistantStatus.ts  useCommandDeckState.ts  useEvents.ts  useFlowState.ts  useOllamaStatus.ts  useOverlayData.ts
(+54 files in other folders)
