[package]
name = "chronos-ai"
version = "0.1.0"
description = "Chronos AI - Local time tracking with AI classification"
authors = ["coffeedev"]
edition = "2021"

[lib]
name = "chronos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
active-win-pos-rs = "0.8"
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
dirs = "6"
plist = "1"
regex = "1"
once_cell = "1"
keyring = "3"
